<resources>
    <string name="app_name">homework14</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="animal">Animal</string>
    <string name="bird">Bird</string>
    <string name="add">add</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>
</resources>