<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".items.ItemsFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="15dp"
            android:hint="@string/name"
            android:padding="10dp" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp">

            <RadioButton
                android:id="@+id/radioBtnAnimal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/animal" />

            <RadioButton
                android:id="@+id/radioBtnBird"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bird" />

        </RadioGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="7dp"
            android:layout_marginTop="20dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>