<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    tools:context=".items.EditItemFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/tvIcon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="top|center"
        android:src="@drawable/ic_animal" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="30dp"
        android:hint="@string/name" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:text="@string/save" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:text="@string/cancel" />

</androidx.appcompat.widget.LinearLayoutCompat>